Resolves: tdf#131507 createCairoSurface returns nullptr on failure

Change-Id: I05190a6f280ebbe750dfda56ef27d3362222b95f